--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@ section {
     margin-top: 3rem;
     margin-bottom: 3rem;
     background: url('img/oo-removebg-preview.png') top right no-repeat,
-        url('img/flor-esquerda.png') bottom left no-repeat;
+        url('img/casa2.0-removebg-preview.png') bottom left no-repeat;
     background-size: 180px 180px;
     /* Ajuste o tamanho conforme necessário */
 }
